[metadata]
name = woof
version = 0.1.0
url = https://github.com/nikromen/woof/
description = Dog translator.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jiri Kyjovsky
author_email = j1.kyjovsky@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: MIT
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    woof=woof:woof
